# mcmc_runtime_comparison

./: .gitignore  CLAUDE.md  Compare runtimes.ipynb  Compare runtimes.qmd  Makefile  explore.R  fit_all.sh  fit_cmdstanpy.py  fit_nutpie_pymc.py  fit_nutpie_stan.py  fit_pymc.py  fit_pymc_blackjax.py  fit_pymc_numpyro.py  pyproject.toml  stan_model.stan  stan_model_optimised.stan
fits/cmdstanpy/: runtime_1970.txt  runtime_1980.txt  runtime_1990.txt  runtime_2000.txt  runtime_2010.txt  runtime_2020.txt
fits/nutpie_pymc/: runtime_1970.txt  runtime_1980.txt  runtime_1990.txt  runtime_2000.txt  runtime_2010.txt  runtime_2020.txt
fits/nutpie_stan/: runtime_1970.txt  runtime_1980.txt  runtime_1990.txt  runtime_2000.txt  runtime_2010.txt  runtime_2020.txt
fits/pymc/: runtime_1970.txt  runtime_1980.txt  runtime_1990.txt  runtime_2000.txt  runtime_2010.txt  runtime_2020.txt
fits/pymc_blackjax_cpu_parallel/: runtime_1970.txt  runtime_1980.txt  runtime_1990.txt  runtime_2000.txt  runtime_2010.txt  runtime_2020.txt
fits/pymc_blackjax_gpu_parallel/: runtime_1970.txt  runtime_1980.txt  runtime_1990.txt  runtime_2000.txt  runtime_2010.txt  runtime_2020.txt
fits/pymc_numpyro_cpu_parallel/: runtime_1970.txt  runtime_1980.txt  runtime_1990.txt  runtime_2000.txt  runtime_2010.txt  runtime_2020.txt
fits/pymc_numpyro_gpu_parallel/: runtime_1970.txt  runtime_1980.txt  runtime_1990.txt  runtime_2000.txt  runtime_2010.txt  runtime_2020.txt
