[project]
name = "mcmc-runtime-comparison"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "arviz<1.0",
    "blackjax>=1.3",
    "cmdstanpy>=1.3.0",
    "jax>=0.9.2",
    "jupyter>=1.1.1",
    "numpy>=2.4.3",
    "numpyro>=0.20.0",
    "nutpie[all]>=0.16.6",
    "pandas>=3.0.1",
    "pymc>=5.28.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "toolz>=1.1.0",
]
